[tool.poetry]
name = "calendar_app"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.6"
cachetools = "4.2.2"
certifi = "2021.5.30"
google-api-core = "2.0.1"
google-api-python-client = "2.21.0"
google-auth = "2.1.0"
google-auth-httplib2 = "0.1.0"
google-auth-oauthlib = "0.4.6"
googleapis-common-protos = "1.53.0"
httplib2 = "0.19.1"
mypy = "0.910"
mypy-extensions = "0.4.3"
oauthlib = "3.1.1"
protobuf = "3.18.0"
pyasn1 = "0.4.8"
pyasn1-modules = "0.2.8"
pyparsing = "2.4.7"
requests = "2.26.0"
requests-oauthlib = "1.3.0"
rsa = "4.7.2"
six = "1.16.0"
toml = "0.10.2"
typing-extensions = "3.10.0.2"
uritemplate = "3.0.1"
urllib3 = "1.26.6"
charset-normalizer = "2.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
